
[TestGenerateRBACManifests/single_namespace_defaults_to_tenant_name - 1]
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-alpha
spec: {}
status: {}

---

[TestGenerateRBACManifests/custom_cluster_role - 1]
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: admin-tenant
spec: {}
status: {}

---

[TestGenerateRBACManifests/single_namespace_defaults_to_tenant_name - 2]
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-alpha
  namespace: team-alpha

---

[TestGenerateRBACManifests/custom_cluster_role - 2]
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: admin-tenant
  namespace: admin-tenant

---

[TestGenerateRBACManifests/custom_cluster_role - 3]
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: admin-tenant
  namespace: admin-tenant
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-admin
subjects:
- kind: ServiceAccount
  name: admin-tenant
  namespace: admin-tenant

---

[TestGenerateRBACManifests/single_namespace_defaults_to_tenant_name - 3]
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-alpha
  namespace: team-alpha
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
subjects:
- kind: ServiceAccount
  name: team-alpha
  namespace: team-alpha

---

[TestGenerateRBACManifests/multiple_namespaces_produce_multi-doc_YAML - 1]
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: ns-dev
spec: {}
status: {}
/-/-/-/
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: ns-staging
spec: {}
status: {}
/-/-/-/
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: ns-prod
spec: {}
status: {}

---

[TestGenerateRBACManifests/multiple_namespaces_produce_multi-doc_YAML - 2]
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta
  namespace: ns-dev
/-/-/-/
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta
  namespace: ns-staging
/-/-/-/
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta
  namespace: ns-prod

---

[TestGenerateRBACManifests/multiple_namespaces_produce_multi-doc_YAML - 3]
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta
  namespace: ns-dev
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
subjects:
- kind: ServiceAccount
  name: team-beta
  namespace: ns-dev
/-/-/-/
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta
  namespace: ns-staging
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
subjects:
- kind: ServiceAccount
  name: team-beta
  namespace: ns-staging
/-/-/-/
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: ksail
  name: team-beta
  namespace: ns-prod
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
subjects:
- kind: ServiceAccount
  name: team-beta
  namespace: ns-prod

---
